database and get all members

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=TimeHarmony
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=TimeHarmony;encrypt=true;trustServerCertificate=true;
+spring.datasource.username=sa
+spring.datasource.password=123456
