--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
 	</properties>
 	<dependencies>
 		<dependency>
+    		<groupId>org.json</groupId>
+    		<artifactId>json</artifactId>
+    		<version>20240303</version>
+		</dependency>
+		<dependency>
     	  	<groupId>org.springframework.boot</groupId>
     	  	<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
     	</dependency>
