--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,13 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+	
+   <dependency>
+     <groupId>com.google.guava</groupId>
+     <artifactId>guava</artifactId>
+     <version>28.0-jre</version>
+   </dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
