deploy database to azure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=TimeHarmony
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=TimeHarmony;encrypt=true;trustServerCertificate=true;
-spring.datasource.username=sa
-spring.datasource.password=123456
+spring.datasource.url=jdbc:sqlserver://timeharmony.database.windows.net:1433;database=TimeHarmony;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=phrimp
+spring.datasource.password=YourStrong@Passw0rd
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
