login by google

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ payment.vnPay.secretKey=AUCPB210WU3DVRRY43K06N5C5FYQJ7FH
 payment.vnPay.version=2.1.0
 payment.vnPay.command=pay
 payment.vnPay.orderType=160000
+
+google.client.id=626385700951-akuek96rg89jg04s8loj6i7gvfd55htg.apps.googleusercontent.com
+google.client.secret=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
